# motors_trajectory

./: CMakeLists.txt  MyInstructions_ROS.txt  README.md  package.xml
config/: robotiq85_gripper.yaml  ur_motor.yaml
include/gripper/: gripper.h  motor_mover.h  motor_planner.h
include/robotiq85_gripper/: gripper.h  motor_mover.h
launch/: robotiq85_gripper.launch  ur_motors.launch
models/: robotiq_85.URDF  robotiq_85.urdf.xacro
src/: gripper.cpp  gripper_client_node.cpp  motor_mover.cpp  motor_node.cpp  motor_planner.cpp  robotiq85_gripper_node.cpp
src/demo/environment/: test_xacro.launch.py
src/demo/environment/models/cable1/: cable1.STEP  cable1.dae  cable1.launch.py  cable1.xacro  cable1_description_publisher.py
src/demo/environment/worlds/: demo.world
srv/: RobotiQGripperControl.srv
