<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>pkg_ars_ros1</name>
  <version>1.2.4</version>
  <description> Pkg container of useful ROS1 files for Italo Almirante's internship project</description>
  <maintainer email="255778@studenti.unimore.it">Italo Almirante</maintainer>
  <license>Apache License 2.0</license>

  <url>http://ros.org/wiki/foo_core</url>
  <author>Italo Almirante</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>python-mock</test_depend>

  <doc_depend>doxygen</doc_depend>
</package>
